--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install --upgrade pipenv
+        # Install dependencies using pipenv
+        pipenv install
+        # Activate the virtual environment
+        pipenv shell
     - name: Lint with flake8
       run: |
         pip install flake8
@@ -46,10 +50,7 @@ jobs:
           # Pull latest changes from the repository
           git pull origin master  # Assuming your code is on the master branch
           # Any additional deployment steps, e.g., restarting services, etc.
-                # Install dependencies using pipenv
-          pipenv install
-          # Activate the virtual environment
-          pipenv shell
+ 
           # Stop the backend service
           sudo systemctl stop backend.service
           # Reload the systemd daemon
