--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,6 +49,8 @@ jobs:
           # Pull latest changes from the repository
           git pull origin master  # Assuming your code is on the master branch
           # Any additional deployment steps, e.g., restarting services, etc.
+          # Install dependencies using pipenv
+          pipenv install
           # Activate the virtual environment
           pipenv shell
           # Stop the backend service
