--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,11 +48,11 @@ jobs:
           git pull --rebase origin master
           # Any additional deployment steps, e.g., restarting services, etc.
           # Install dependencies using pipenv
-          pipenv install
-           # Set non-interactive TERM variable
-          export TERM=dumb
-          # Activate the virtual environment
-          pipenv shell
+          # pipenv install
+          #  # Set non-interactive TERM variable
+          # export TERM=dumb
+          # # Activate the virtual environment
+          # pipenv shell
           # Stop the backend service
           sudo systemctl stop backend.service
           # Reload the systemd daemon
