--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,6 +46,10 @@ jobs:
           cd new/FlaskApp/
           # Pull latest changes from the repository and rebase local changes
           git pull --rebase origin master
+          
+          pipenv install
+          
+          source /home/ubuntu/.local/share/virtualenvs/FlaskApp-WAvWhMNg/bin/activate 
           # Stop the backend service
           sudo systemctl stop backend.service
           # Reload the systemd daemon
